--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-11-04 21:15:27
- * @LastEditTime: 2021-11-10 16:27:54
+ * @LastEditTime: 2021-11-11 16:01:55
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \Zero-Cup-2021\index.html
@@ -62,6 +62,22 @@
       <div class="sc2_6">
       </div>
       <div class="sc2_9">
+        <section class="section">
+          <div class="close-section">&times;</div>
+          <div class="demo-box">4D</div>
+        </section>
+        <section class="section">
+          <div class="close-section">&times;</div>
+          <div class="demo-box">VR虚拟现实</div>
+        </section>
+        <section class="section">
+          <div class="close-section">&times;</div>
+          <div class="demo-box">AR电影</div>
+        </section>
+        <section class="section">
+          <div class="close-section">&times;</div>
+          <div class="demo-box"></div>
+        </section>
       </div>
       <div class="sc3">
         <div class="background"><span>特效</span></div>
