--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-11-04 21:15:27
- * @LastEditTime: 2021-11-11 16:01:55
+ * @LastEditTime: 2021-11-11 17:49:40
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \Zero-Cup-2021\index.html
@@ -64,7 +64,7 @@
       <div class="sc2_9">
         <section class="section">
           <div class="close-section">&times;</div>
-          <div class="demo-box">4D</div>
+          <div class="demo-box">4D技术</div>
         </section>
         <section class="section">
           <div class="close-section">&times;</div>
@@ -75,8 +75,9 @@
           <div class="demo-box">AR电影</div>
         </section>
         <section class="section">
+          <video src=""></video>
           <div class="close-section">&times;</div>
-          <div class="demo-box"></div>
+          <div class="demo-box">沉浸式体验</div>
         </section>
       </div>
       <div class="sc3">
