--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2021-11-04 21:15:27
- * @LastEditTime: 2021-11-11 17:49:40
+ * @LastEditTime: 2021-11-11 20:24:14
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \Zero-Cup-2021\index.html
@@ -63,19 +63,22 @@
       </div>
       <div class="sc2_9">
         <section class="section">
+          <video src="videos/1.mp4" class="video" loop controls></video>
           <div class="close-section">&times;</div>
-          <div class="demo-box">4D技术</div>
+          <div class="demo-box">4D</div>
         </section>
         <section class="section">
+          <video src="videos/2.mp4" class="video" loop controls></video>
           <div class="close-section">&times;</div>
           <div class="demo-box">VR虚拟现实</div>
         </section>
         <section class="section">
+          <video src="videos/3.mp4" class="video" loop controls></video>
           <div class="close-section">&times;</div>
-          <div class="demo-box">AR电影</div>
+          <div class="demo-box">游戏&电影</div>
         </section>
         <section class="section">
-          <video src=""></video>
+          <video src="videos/4.mp4" class="video" loop controls></video>
           <div class="close-section">&times;</div>
           <div class="demo-box">沉浸式体验</div>
         </section>
