--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
         <div class="cont mov1">
           <div class="intro">
             <img src="imgs/wings.jpg" alt="poster">
-            <p><i><b>《翼》(1927)</b></i><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp以空军、男人的友谊与默契、四角恋为主题讲述了一个一战时期美国小镇的故事。场面宏大，空战特效在其年代显得出人意料，男女之情与战争之残酷交织，摄影流畅明丽，细节动人。战争的残酷、友谊的纯真、爱情的美好被完美结合和呈现。</p>
-          </div>          
+            <p>
+              <i><b>《翼》(1927)</b></i><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp以空军、男人的友谊与默契、四角恋为主题讲述了一个一战时期美国小镇的故事。场面宏大，空战特效在其年代显得出人意料，男女之情与战争之残酷交织，摄影流畅明丽，细节动人。战争的残酷、友谊的纯真、爱情的美好被完美结合和呈现。
+            </p>
+          </div>
         </div>
         <div class="desc1">
           <ul>
@@ -90,10 +92,12 @@
         <div class="cont mov2">
           <div class="intro">
             <img src="imgs/farewell.jpg" alt="poster">
-            <p><i><b>《霸王别姬》(1993)</b></i><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp影片围绕两位京剧伶人半个世纪的悲欢离合，展现了对传统文化、人的生存状态及人性的思考与领悟。<br>
+            <p>
+              <i><b>《霸王别姬》(1993)</b></i><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp影片围绕两位京剧伶人半个世纪的悲欢离合，展现了对传统文化、人的生存状态及人性的思考与领悟。<br>
               &nbsp&nbsp&nbsp&nbsp&nbsp段小楼与程蝶衣是一对打小一起长大的师兄弟，两人一个演生，一个饰旦。两人约定合演一辈子《霸王别姬》。但两人对戏剧与人生关系的理解有本质不同，段小楼深知戏非人生，程蝶衣则是人戏不分，“不疯魔不成活”。<br>
               &nbsp&nbsp&nbsp&nbsp&nbsp两人的不同人生观在时代洪流中指向不同的路程，分道扬镳，最后风波平静后似乎有和好的迹象，但最终是悲剧结尾。<br>
-              &nbsp&nbsp&nbsp&nbsp&nbsp这是个人之悲、艺术之悲、爱之悲。</p>
+              &nbsp&nbsp&nbsp&nbsp&nbsp这是个人之悲、艺术之悲、爱之悲。
+            </p>
           </div>
         </div>
         <div class="desc2">
@@ -110,8 +114,10 @@
         <div class="cont mov3">
           <div class="intro">
             <img src="imgs/chongking.jpg" alt="poster">
-            <p><i><b>《重庆森林》(1994)</b></i><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp影片由两段故事组成：编号为223的警察患上失恋综合症后，与金发女杀手擦肩而过又离奇相遇。快餐店新来的女招待爱上了编号为663的警察，时常偷偷潜入他家，悄悄地改变他的生活。<br>
-              &nbsp&nbsp&nbsp&nbsp&nbsp在这部片子里，抽帧的画面、无厘头而有趣的比喻、冷峻的台词、复古调色等特质把王家卫的迷幻风格表现得淋漓尽致，被无数文艺青年当作心目中的文艺片之首。</p>
+            <p>
+              <i><b>《重庆森林》(1994)</b></i><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp影片由两段故事组成：编号为223的警察患上失恋综合症后，与金发女杀手擦肩而过又离奇相遇。快餐店新来的女招待爱上了编号为663的警察，时常偷偷潜入他家，悄悄地改变他的生活。<br>
+              &nbsp&nbsp&nbsp&nbsp&nbsp在这部片子里，抽帧的画面、无厘头而有趣的比喻、冷峻的台词、复古调色等特质把王家卫的迷幻风格表现得淋漓尽致，被无数文艺青年当作心目中的文艺片之首。
+            </p>
           </div>
         </div>
         <div class="desc3">
@@ -125,12 +131,15 @@
             <li>王菲 金城武 梁朝伟 林青霞</li>
           </ul>
         </div>
+      </div>
       <div class="box">
         <div class="cont mov4">
           <div class="intro">
             <img src="imgs/interstellar.jpg" alt="poster">
-            <p><i><b>《星际穿越》(2014)</b></i><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp近未来的地球农作物因枯萎病灭绝，人类每日在沙尘暴的肆虐下倒数着所剩不多的光景，在家务农的前NASA宇航员库珀狠心离开女儿踏上寻找新星球拯救人类的路程。在遥远的星系，有的星球上一小时等于地球的七年光阴，沧海桑田；有不知吉凶的前任探索者的驻地；有黑洞的壮伟与神秘，在最后关头，有一份超越了时空的笃定情怀将库珀、女儿、人类紧紧相连。<br>
-              &nbsp&nbsp&nbsp&nbsp&nbsp诺兰尽其所能拍出了触手可及的科幻，硬核又充满人性，温情又隐含黑暗面，让人潸然泪下。</p>
+            <p>
+              <i><b>《星际穿越》(2014)</b></i><br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp近未来的地球农作物因枯萎病灭绝，人类每日在沙尘暴的肆虐下倒数着所剩不多的光景，在家务农的前NASA宇航员库珀狠心离开女儿踏上寻找新星球拯救人类的路程。在遥远的星系，有的星球上一小时等于地球的七年光阴，沧海桑田；有不知吉凶的前任探索者的驻地；有黑洞的壮伟与神秘，在最后关头，有一份超越了时空的笃定情怀将库珀、女儿、人类紧紧相连。<br>
+              &nbsp&nbsp&nbsp&nbsp&nbsp诺兰尽其所能拍出了触手可及的科幻，硬核又充满人性，温情又隐含黑暗面，让人潸然泪下。
+            </p>
           </div>
         </div>
         <div class="desc4">
@@ -144,30 +153,29 @@
         </div>
       </div>
     </div>
-
     <div class="sc2_9">
       <section class="section">
-          <video src="videos/1.mp4" class="video" loop controls></video>
-          <div class="close-section">&times;</div>
-          <div class="demo-box">4D</div>
-        </section>
-        <section class="section">
-          <video src="videos/2.mp4" class="video" loop controls></video>
-          <div class="close-section">&times;</div>
-          <div class="demo-box">VR虚拟现实</div>
-        </section>
-        <section class="section">
-          <video src="videos/3.mp4" class="video" loop controls></video>
-          <div class="close-section">&times;</div>
-          <div class="demo-box">游戏&电影</div>
-        </section>
-        <section class="section">
-          <video src="videos/4.mp4" class="video" loop controls></video>
-          <div class="close-section">&times;</div>
-          <div class="demo-box">沉浸式体验</div>
-        </section>
+        <video src="videos/1.mp4" class="video" loop controls></video>
+        <div class="close-section">&times;</div>
+        <div class="demo-box">4D</div>
+      </section>
+      <section class="section">
+        <video src="videos/2.mp4" class="video" loop controls></video>
+        <div class="close-section">&times;</div>
+        <div class="demo-box">VR虚拟现实</div>
+      </section>
+      <section class="section">
+        <video src="videos/3.mp4" class="video" loop controls></video>
+        <div class="close-section">&times;</div>
+        <div class="demo-box">游戏&电影</div>
+      </section>
+      <section class="section">
+        <video src="videos/4.mp4" class="video" loop controls></video>
+        <div class="close-section">&times;</div>
+        <div class="demo-box">沉浸式体验</div>
+      </section>
     </div>
-  
+
     <div class="sc3">
       <div class="background"><span>特效</span></div>
       <div class="last">
